syntax = "proto3";

package proto;

option go_package = "github.com/Ali-Gorgani/library-management-api/books-service/api/pb";

import "google/protobuf/timestamp.proto";

message BookRes {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  string subject = 5;
  string genre = 6;
  int32 published_year = 7;
  bool available = 8;
  optional int32 borrower_id = 9;  // Optional field
  google.protobuf.Timestamp created_at = 10;
}

message AddBookReq {
  string title = 1;
  string author = 2;
  string category = 3;
  string subject = 4;
  string genre = 5;
  int32 published_year = 6;
}

message GetBooksReq {}

message GetBookReq {
  int32 id = 1;
}

message UpdateBookReq {
  int32 id = 1;
  string title = 2;
  string author = 3;
  string category = 4;
  string subject = 5;
  string genre = 6;
  int32 published_year = 7;
  bool available = 8;
  optional int32 borrower_id = 9;  // Optional field
}

message DeleteBookReq {
  int32 id = 1;
}

message DeleteBookRes {}

message BorrowBookReq {
  int32 id = 1;
  optional int32 borrower_id = 2;  // Optional field
}

message ReturnBookReq {
  int32 id = 1;
  optional int32 borrower_id = 2;  // Optional field
}

message SearchBooksReq {
  string title = 1;
  string author = 2;
  string category = 3;
}

message CategoryBooksReq {
  string category_type = 1;
  string category_value = 2;
}

message AvailableBooksReq {}

BooksResponse {
  repeated BookRes books = 1;
}

service BookService {
    rpc AddBook(AddBookReq) returns (BookRes) {}
    rpc GetBooks(GetBooksReq) returns (stream BookRes) {}
    rpc GetBook(GetBookReq) returns (BookRes) {}
    rpc UpdateBook(UpdateBookReq) returns (BookRes) {}
    rpc DeleteBook(DeleteBookReq) returns (DeleteBookRes) {}
    rpc BorrowBook(BorrowBookReq) returns (BookRes) {}
    rpc ReturnBook(ReturnBookReq) returns (BookRes) {}
    rpc SearchBooks(SearchBooksReq) returns (stream BookRes) {}
    rpc CategoryBooks(CategoryBooksReq) returns (stream BookRes) {}
    rpc AvailableBooks(AvailableBooksReq) returns (stream BookRes) {}
}